Tiny cleanups